// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage debe de mostrar el componente con el nombre del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="product image"
    className=" productImg undefined "
    src="./coffee-mug.png"
  />
</div>
`;

exports[`ProductImage debe de mostrar el componente correctamente con el titulo personalizado 1`] = `
<img
  alt="product image"
  className=" productImg undefined "
  src="https://hola.jpg"
/>
`;
